--- a/vcx/ci/Jenkinsfile
+++ b/vcx/ci/Jenkinsfile
@@ -138,8 +138,10 @@ def android() {
         stage('Android Build') {
             parallel([
                 "x86" : { buildAndroid('x86') },
+                "x86_64" : { buildAndroid('x86_64') },
                 "arm" : { buildAndroid('arm') },
                 "arm64" : { buildAndroid('arm64') }
+                "armv7" : { buildAndroid('armv7') }
             ])
         }
         node('ubuntu') {
@@ -244,7 +246,7 @@ def buildAndroid(arch) {
 }
 
 def packageAndroid(android) {
-    all_archs = ["arm", "arm64", "x86"]
+    all_archs = ["arm", "arm64", "armv7", "x86", "x86_64"]
     for (arch in all_archs) {
         dir("runtime_android_build/libvcx_${arch}") {
             unstash name: "libvcx_${arch}"
