--- a/vcx/wrappers/java/vcx/android/build.gradle
+++ b/vcx/wrappers/java/vcx/android/build.gradle
@@ -11,6 +11,7 @@ buildscript {
         maven {
             url "https://maven.google.com"
         }
+
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.0'
@@ -23,6 +24,9 @@ repositories {
     maven { url "http://repo.maven.apache.org/maven2" }
     maven {
         url "https://maven.google.com"
+    }
+    maven {
+        url "https://jitpack.io"
     }
 }
 
@@ -128,6 +132,10 @@ uploadToKraken.dependsOn(assemble)
 
 
 dependencies {
+
+    implementation('com.github.bright:slf4android:0.1.5'){
+        transitive = true
+    }
     implementation 'net.java.dev.jna:jna:4.5.0@aar'
     implementation group: 'org.apache.commons', name: 'commons-lang3', version:'3.5'
     implementation 'net.sourceforge.streamsupport:android-retrofuture:1.6.2'
