--- a/vcx/wrappers/java/vcx/build.gradle
+++ b/vcx/wrappers/java/vcx/build.gradle
@@ -58,11 +58,12 @@ tasks.withType(Test) {
 }
 
 dependencies {
-
+    implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
     implementation 'net.java.dev.jna:jna:4.5.0'
     implementation group: 'org.apache.commons', name: 'commons-lang3', version:'3.5'
     implementation 'net.sourceforge.streamsupport:android-retrofuture:1.6.2'
     implementation group: 'net.sourceforge.streamsupport', name: 'android-retrostreams', version: '1.6.2'
+    testImplementation group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.25'
     testImplementation group: 'junit', name: 'junit', version:'4.12'
     testImplementation group: 'commons-io', name: 'commons-io', version:'2.5'
     testImplementation group: 'org.json', name: 'json', version:'20160810'
