Passes All Tests
In test_real_proof, the results returned from
the disclosed_proof::retrieve_credentials needs to be converted
into a serde_json::Value and passed into a json! macro
to be properly parsed (otherwise, it gets too many '/' characters,
etc.).

--- a/vcx/libvcx/Cargo.toml
+++ b/vcx/libvcx/Cargo.toml
@@ -13,7 +13,7 @@ path = "src/lib.rs"
 crate-type = ["staticlib","rlib", "dylib"]
 
 [features]
-default = ["pool_tests", "sovtoken", "agency"]
+default = ["nullpay"]
 pool_tests = []
 nullpay = []
 sovtoken = []
