--- a/vcx/ci/Jenkinsfile
+++ b/vcx/ci/Jenkinsfile
@@ -19,9 +19,9 @@ testing()
 def testing() {
     stage('Testing') {
         parallel([
-            'Xenial' : { mainUbuntu() },
+            // 'Xenial' : { mainUbuntu() },
             'Android': { android() },
-            'iOS' : { ios() }
+            // 'iOS' : { ios() }
         ])
     }
 }
@@ -155,9 +155,9 @@ def android() {
         stage('Android Build') {
             parallel([
                 "x86" : { buildAndroid("x86") },
-                "x86_64" : { buildAndroid("x86_64") },
+                // "x86_64" : { buildAndroid("x86_64") },
                 "arm" : { buildAndroid("arm") },
-                "arm64" : { buildAndroid("arm64") },
+                // "arm64" : { buildAndroid("arm64") },
                 "armv7" : { buildAndroid("armv7") }
             ])
         }
@@ -170,10 +170,10 @@ def android() {
                     packageAndroid(android)
                 }
                 stage('Android Publishing') {
-                    if (env.BRANCH_NAME == "master") {
+                    // if (env.BRANCH_NAME == "master") {
                         //Publish package on aptly
                         publishAndroid(android)
-                    }
+                    // }
                 }
             } catch (Exception ex) {
                 currentBuild.result = "FAILED"
@@ -237,8 +237,8 @@ def buildAndroid(arch) {
 
             android.inside {
                 ANDROID_SCRIPT_PATH = 'vcx/ci/scripts/androidBuild.sh'
-                LIBINDY_BRANCH="stable"
-                LIBINDY_VERSION="1.6.5"
+                LIBINDY_BRANCH="rc"
+                LIBINDY_VERSION="1.6.6-22"
                 LIBINDY_TAG=""
 
                 sh 'sudo ./vcx/ci/scripts/installCert.sh'
@@ -263,7 +263,8 @@ def buildAndroid(arch) {
 }
 
 def packageAndroid(android) {
-    all_archs = ["arm", "arm64", "armv7", "x86", "x86_64"]
+    // all_archs = ["arm", "arm64", "armv7", "x86", "x86_64"]
+    all_archs = ["arm", "armv7", "x86"]
     for (arch in all_archs) {
         dir("runtime_android_build/libvcx_${arch}") {
             unstash name: "libvcx_${arch}"
