--- a/vcx/ci/Jenkinsfile
+++ b/vcx/ci/Jenkinsfile
@@ -19,9 +19,9 @@ testing()
 def testing() {
     stage('Testing') {
         parallel([
-//            'Xenial' : { mainUbuntu() },
-            'Android': { android() }
-//            'iOS' : { ios() }
+            'Xenial' : { mainUbuntu() },
+            'Android': { android() },
+            'iOS' : { ios() }
         ])
     }
 }
