--- a/vcx/ci/Jenkinsfile
+++ b/vcx/ci/Jenkinsfile
@@ -116,8 +116,7 @@ def mainUbuntu() {
                     // ******** PUBLISHING (artifacts are in a Docker Volume) ********
                     withCredentials([usernameColonPassword(credentialsId: 'jenkins-kraken-svc', variable: 'KRAKEN_CREDENTIALS')]) {
                         libvcx.inside("--network=host") {
-                            env.KRAKEN_CREDENTIALS = ${KRAKEN_CREDENTIALS}
-                            env.LOOKUP_DIR = './output'
+                            env.KRAKEN_CREDENTIALS = "${KRAKEN_CREDENTIALS}"
                             // ******** Publish Libvcx Debian to repo ********
                             sh "vcx/ci/scripts/publish.sh \"libvcx*.deb\" https://kraken.corp.evernym.com/repo/portal_dev/upload"
                             sh "vcx/ci/scripts/publish.sh \"libvcx*.deb\" https://kraken.corp.evernym.com/repo/agency_dev/upload"
