--- a/vcx/ci/Jenkinsfile
+++ b/vcx/ci/Jenkinsfile
@@ -52,6 +52,7 @@ def mainUbuntu() {
                 withCredentials([usernameColonPassword(credentialsId: 'jenkins-kraken-svc', variable: 'KRAKEN_CREDENTIALS')]) {
                     libindy.inside("--network=host") {
                         // ******** Publish Libvcx Debian to repo ********
+                        sh "mkdir ./output"
                         sh "touch ./output/deleteme.tgz"
                         sh "echo \"foobar\" > ./output/deleteme.tgz"
                          sh "bash vcx/ci/scripts/publish.sh \"deleteme*.tgz\" https://kraken.corp.evernym.com/repo/npm/upload"
