updates libindy to 1.6.7 and libsovtoken to rc 0.9.4+1.6

--- a/vcx/ci/Jenkinsfile
+++ b/vcx/ci/Jenkinsfile
@@ -249,9 +249,9 @@ def buildAndroid(arch) {
 
             android.inside {
                 ANDROID_SCRIPT_PATH = 'vcx/ci/scripts/androidBuild.sh'
-                LIBINDY_BRANCH="rc"
+                LIBINDY_BRANCH="stable"
                 LIBINDY_VERSION="1.6.7"
-                LIBINDY_TAG="39"
+                LIBINDY_TAG=""
 
                 sh 'sudo ./vcx/ci/scripts/installCert.sh'
                 sh "LIBINDY_BRANCH=${LIBINDY_BRANCH} LIBINDY_VERSION=${LIBINDY_VERSION} LIBINDY_TAG=${LIBINDY_TAG} ./${ANDROID_SCRIPT_PATH} ${arch}"
